--- a/steckbrief.html
+++ b/steckbrief.html
@@ -12,8 +12,9 @@ body {
 </style>
 </head>
 <body>
-	<a href="#">Link zu Aufgabe 2</a>
+	<h1>Steckbrief</h1>
+	<a href="../Steckbrief/L02/A_02.html">Link zu Aufgabe 2</a>
 	<br>
-	<a href="#">Link zu Aufgabe 1</a>
+	<a href="../Steckbrief/L03/Portfolio.html">Link zu Aufgabe 3</a>
 </body>
 </html>
