--- a/steckbrief.html
+++ b/steckbrief.html
@@ -13,10 +13,8 @@ body {
 </head>
 <body>
 	<h1>Steckbrief</h1>
-	<a href="https://larahalmosi.github.io/EIA_SO22/L02">Link zu Aufgabe 2</a>
+	<a href="../Steckbrief/L02/A_02.html">Link zu Aufgabe 2</a>
 	<br>
-	<a href="https://larahalmosi.github.io/EIA_SO22/L03">Link zu Aufgabe 3</a>
-	<br>
-	<a href="https://larahalmosi.github.io/EIA_SO22/L>Link zu Aufgabe 4</a>
+	<a href="../Steckbrief/L03/Portfolio.html">Link zu Aufgabe 3</a>
 </body>
 </html>
