--- a/steckbrief.html
+++ b/steckbrief.html
@@ -13,8 +13,9 @@ body {
 </head>
 <body>
 	<h1>Steckbrief</h1>
-	<a href="L02/A_02.html">Link zu Aufgabe 2</a>
+	<a href="L02/A_02.html" target="_blank">Link zu Aufgabe 2</a>
 	<br>
-	<a href="L03/Portfolio.html">Link zu Aufgabe 3</a>
+	<a href="L03/Portfolio.html" target="_blank">Link zu Aufgabe 3</a>
+	
 </body>
 </html>
