--- a/L04/L03/About me.html
+++ b/L04/L03/About me.html
@@ -4,14 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <title>About me</title> 
+    <link rel="stylesheet" href="portfolio.css"></a>
 </head>
 <body>
+    <header>
+        <div class="hintergrundbild">
+          <a id="logo" href="../L03/Portfolio.html">
+            <img class="logo"  width=133px height=auto src="../Logo.png" alt="logo"></a>
+        <nav class="container">
+        <div id="nav">
+          <a href="../L03/Contact.html"> Contact</a>
+          <a href="../L03/About me.html"> About</a>
+           <a href="../L03/Portfolio.html"> Portfolio</a>
+        </nav></div>
+      </header>
+      <main class="container">
     <h1>About me</h1>
     <p>Name: Lara Sophia Elisabeth Halmosi</p>
     <p>Birthday: 19.11.1999 </p>
     <p>Geburtsort: Stuttgart</p>
     <p>Lieblingsfarbe: blau, schwarz </p>
     <p>Hobbys: zocken, Serien schauen, musik hören, freunde treffen, Krafttraining</p>
+</main>
+        <div class="footer">
+        <p id="p1">EIA1 <br>
+          Großhausberg 9 <br>
+          78120Furtwangen <br>
+          Telefon: 1234 56789 <br>
+          lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
+        </p>
+        <p id="p2">Follow me <br>
+          <a href="https://www.instagram.com/">
+            <img  width=50px height=50px  src="../L03/icon_insta.svg"></a>
+          <a href="https://www.youtube.com/">
+            <img width=50px height=50px   src="../L03/icon_youtube.svg"></a>
+          <a href="https://de.linkedin.com/"> 
+            <img width=50px  height=50px  src="../L03/icon_linkedin.svg"></p></a>
+        <p id="p3"> Copyright © 2022 EIA1 <br> 
+          All rights reserved</p>
+        </div>
 </body>
 </html>
