--- a/L04/L03/Contact.html
+++ b/L04/L03/Contact.html
@@ -5,14 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="portfolio.css"></a>
 </head>
 <body>
+    <header>
+        <div class="hintergrundbild">
+          <a id="logo" href="../L03/Portfolio.html">
+            <img  class="logo" width=133px height=auto src="../Logo.png" alt="logo"></a>
+        <nav class="container">
+        <div id="nav">
+          <a href="../L03/Contact.html"> Contact</a>
+          <a href="../L03/About me.html"> About</a>
+           <a href="../L03/Portfolio.html"> Portfolio</a>
+        </nav></div>
+      </header>
+      <main class="container">
     <h1>Contact</h1>
- <a href="https://www.instagram.com/">
-        <img width="150"px;height="150px" src="../L03/insta.png"> </a>
- <a href="https://de.linkedin.com/">
-        <img width="150"px;height="150px" src="../L03/Download.png"> </a>
-        <a href="https://www.wattpad.com/?locale=de_DE">
-            <img width="200"px;height="200px" src="../L03/Download (1).png"> </a>
+    <h2>Send me a request</h2>
+        <br>
+        <textarea>Your name</textarea> <br>
+        <textarea>Your e-mail</textarea> <br>
+        <textarea id="message">Your message</textarea><br>
+        <button>Send</button>
+        </main>
+        </div>
+    </main>
+    </div>
+     <div class="footer">
+                <p id="p1">EIA1 <br>
+                  Großhausberg 9 <br>
+                  78120Furtwangen <br>
+                  Telefon: 1234 56789 <br>
+                  lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
+                </p>
+                <p id="p2">Follow me <br>
+                  <a href="https://www.instagram.com/">
+                    <img  width=50px height=50px  src="../L03/icon_insta.svg"></a>
+                  <a href="https://www.youtube.com/">
+                    <img width=50px height=50px   src="../L03/icon_youtube.svg"></a>
+                  <a href="https://de.linkedin.com/"> 
+                    <img width=50px  height=50px  src="../L03/icon_linkedin.svg"></p></a>
+                <p id="p3"> Copyright © 2022 EIA1 <br> 
+                  All rights reserved</p>
+                
 </body>
 </html>
