--- a/L04/L03/Portfolio.html
+++ b/L04/L03/Portfolio.html
@@ -3,30 +3,50 @@
 <head>
 <meta charset="utf-8">
 <title> Portfolio</title>
-<link rel="stylesheet" href="../portfolio.css"></a>
+<link rel="stylesheet" href="portfolio.css"></a>
 </head>
-  <body class="container"></body>
+  <body>
   <header>
     <div class="hintergrundbild">
-      <a class="logo" href="../L03/Portfolio.html"><img width=133px height=auto src="../Logo.png" alt="logo"></a>
-    <nav>
-     <a href="../L03/Portfolio.html"> Portfolio</a>
-     <a href="../L03/About me.html"> About</a>
-     <a href="../L03/Contact.html"> Contact</a>
-    </nav>
+      <a id="logo"  href="../L03/Portfolio.html">
+        <img  width=133px height=auto src="../Logo.png" alt="logo"></a>
+    <nav class="container">
+    <div id="nav">
+      <a href="../L03/Contact.html"> Contact</a>
+       <a href="../L03/About me.html"> About</a>
+        <a href="../L03/Portfolio.html"> Portfolio</a>
+    </nav></div>
   </header>
+  <main class="container">
   <h2>Fotos</h2>
-    <img width="400" height="250" src="../L03/DSC_0709.JPG" alt="chinatown">
-    <img width="400" height="250" src="../L03/DSC_1327.JPG" alt="moon">
-    <img width="400" height="250" src="../L03/DSC_2278.JPG" alt="violet flower">
-    <img width="400" height="250" src="../L03/DSC_2264.JPG" alt="light">
-    <img width="400" height="250" src="../L03/DSC_2265.JPG" alt="candles">
-    <img width="400" height="auto" src="../L03/DSC_3404.JPG" alt="more flowers">
+  <img width="600" height="400" src="../L03/DSC_3705.JPG" alt="chinatown">
+   <img width="600" height="400" src="../L03/DSC_0709.JPG" alt="chinatown">
+    <img width="600" height="400" src="../L03/DSC_1327.JPG" alt="moon">
+    <img width="600" height="400" src="../L03/DSC_2278.JPG" alt="violet flower">
+    <img width="600" height="400" src="../L03/DSC_2264.JPG" alt="light">
+    <img width="600" height="400" src="../L03/DSC_2265.JPG" alt="candles"><br>
+    <img width="300" height="550" src="../L03/DSC_3404.JPG" alt="more flowers">
+    <img width="300" height="550" src="../L03/IMG_20210422_112036.jpg" alt="more white flowers">
   <h2>Videos</h2>
     <video width="400" height="250" controls muted autoplay>
      <source src="../L03/animation_lara.halmosi.mp4" type="video/mp4">
-<footer>
-
-</footer>
+    </main>
+<div class="footer">
+<p id="p1">EIA1 <br>
+  Großhausberg 9 <br>
+  78120Furtwangen <br>
+  Telefon: 1234 56789 <br>
+  lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
+</p>
+<p id="p2">Follow me <br>
+  <a href="https://www.instagram.com/">
+    <img  width=50px height=50px  src="../L03/icon_insta.svg"></a>
+  <a href="https://www.youtube.com/">
+    <img width=50px height=50px   src="../L03/icon_youtube.svg"></a>
+  <a href="https://de.linkedin.com/"> 
+    <img width=50px  height=50px  src="../L03/icon_linkedin.svg"></p></a>
+<p id="p3"> Copyright © 2022 EIA1 <br> 
+  All rights reserved</p>
+</div>
 </body>
 </html>
