--- a/steckbrief.html
+++ b/steckbrief.html
@@ -16,6 +16,8 @@ body {
 	<a href="L02/A_02.html" target="_blank">Link zu Aufgabe 2</a>
 	<br>
 	<a href="L03/Portfolio.html" target="_blank">Link zu Aufgabe 3</a>
+	<br>
+	<a href="L04/L03/Portfolio.html" target="_blank">Link zu Aufgabe 3</a>
 	
 </body>
 </html>
