--- a/L04/L03/Contact.html
+++ b/L04/L03/Contact.html
@@ -8,17 +8,20 @@
     <link rel="stylesheet" href="portfolio.css"></a>
 </head>
 <body>
-    <header>
-        <div class="hintergrundbild">
-          <a id="logo" href="../L03/Portfolio.html">
-            <img  class="logo" width=133px height=auto src="../Logo.png" alt="logo"></a>
-        <nav class="container">
-        <div id="nav">
-          <a href="../L03/Contact.html"> Contact</a>
-          <a href="../L03/About me.html"> About</a>
-           <a href="../L03/Portfolio.html"> Portfolio</a>
-        </nav></div>
-      </header>
+  <header>
+    <div class="hintergrundbild">
+      <div class="container">
+    <a id="logo"  href="../L03/Portfolio.html">
+        <img  width=150px height=auto src="../Logo.png" alt="logo"></a>
+    <nav >
+    <div  id="nav">
+      <a id="active" href="../L03/Contact.html"> Contact</a>
+       <a href="../L03/About me.html"> About</a>
+        <a  href="../L03/Portfolio.html"> Portfolio</a>
+    </nav>
+</div>
+</div>
+  </header>
       <main class="container">
     <h1>Contact</h1>
     <h2>Send me a request</h2>
@@ -31,22 +34,24 @@
         </div>
     </main>
     </div>
-     <div class="footer">
-                <p id="p1">EIA1 <br>
-                  Großhausberg 9 <br>
-                  78120Furtwangen <br>
-                  Telefon: 1234 56789 <br>
-                  lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
-                </p>
-                <p id="p2">Follow me <br>
-                  <a href="https://www.instagram.com/">
-                    <img  width=50px height=50px  src="../L03/icon_insta.svg"></a>
-                  <a href="https://www.youtube.com/">
-                    <img width=50px height=50px   src="../L03/icon_youtube.svg"></a>
-                  <a href="https://de.linkedin.com/"> 
-                    <img width=50px  height=50px  src="../L03/icon_linkedin.svg"></p></a>
-                <p id="p3"> Copyright © 2022 EIA1 <br> 
-                  All rights reserved</p>
-                
+    <footer>
+      <div class="container">
+      <p id="p1">EIA1 <br>
+        Großhausberg 9 <br>
+        78120Furtwangen <br>
+        Telefon: 1234 56789 <br>
+        lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
+      </p>
+      <p  id="p2">Follow me <br>
+        <a href="https://www.instagram.com/">
+          <img  width=40px height=40px  src="../L03/icon_insta.svg"></a>
+        <a href="https://www.youtube.com/">
+          <img width=40px height=40px   src="../L03/icon_youtube.svg"></a>
+        <a href="https://de.linkedin.com/"> 
+          <img width=40px  height=40px  src="../L03/icon_linkedin.svg"></p></a>
+      <p id="p3"> Copyright © 2022 EIA1 <br> 
+        All rights reserved</p>
+      </div>
+      </footer>
 </body>
 </html>
