--- a/L05/About me.html
+++ b/L05/About me.html
@@ -8,17 +8,20 @@
     <link rel="stylesheet" href="portfolio.css"></a>
 </head>
 <body>
-    <header>
-        <div class="hintergrundbild">
-          <a id="logo" href="Portfolio.html">
-            <img class="logo"  width=133px height=auto src="Logo.png" alt="logo"></a>
-        <nav class="container">
-        <div id="nav">
-          <a href="Contact.html"> Contact</a>
-          <a class="active_seite"href="About me.html"> About</a>
-           <a href="Portfolio.html"> Portfolio</a>
-        </nav></div>
-      </header>
+  <header>
+    <div class="hintergrundbild">
+      <div class="container">
+    <a id="logo"  href="Portfolio.html">
+        <img  width=150px height=auto src="Logo.png" alt="logo"></a>
+    <nav >
+    <div  id="nav">
+      <a href="Contact.html"> Contact</a>
+       <a id="active" href="About me.html"> About</a>
+        <a href="Portfolio.html"> Portfolio</a>
+    </nav>
+</div>
+</div>
+  </header>
       <main class="container">
     <h1>About me</h1>
     <p>Name: Lara Sophia Elisabeth Halmosi</p>
@@ -28,24 +31,22 @@
     <p>Hobbys: zocken, Serien schauen, musik hören, freunde treffen, Krafttraining</p>
 </main>
 <footer>
-  <div class="container" id="footer">
+  <div class="container">
   <p id="p1">EIA1 <br>
     Großhausberg 9 <br>
     78120Furtwangen <br>
     Telefon: 1234 56789 <br>
     lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
   </p>
-  <p id="p2">Follow me <br>
-    <a id="icons"   href="https://www.instagram.com/">
+  <p  id="p2">Follow me <br>
+    <a id="soclinks" href="https://www.instagram.com/">
       <img  width=40px height=40px  src="icon_insta.svg"></a>
-    <a id="icons"href="https://www.youtube.com/">
+    <a id="soclinks" href="https://www.youtube.com/">
       <img width=40px height=40px   src="icon_youtube.svg"></a>
-    <a id="icons" href="https://de.linkedin.com/"> 
-      <img width=40px  height=40px  src="icon_linkedin.svg"></a>
-    </p>
+    <a id="soclinks" href="https://de.linkedin.com/"> 
+      <img width=40px  height=40px  src="icon_linkedin.svg"></p></a>
   <p id="p3"> Copyright © 2022 EIA1 <br> 
     All rights reserved</p>
   </div>
   </footer>
-</body>
 </html>
