--- a/L05/Contact.html
+++ b/L05/Contact.html
@@ -40,12 +40,12 @@
         lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
       </p>
       <p id="p2">Follow me <br>
-        <a id="icons"   href="https://www.instagram.com/">
-          <img  width=40px height=40px  src="icon_insta.svg"></a>
-        <a id="icons"href="https://www.youtube.com/">
-          <img width=40px height=40px   src="icon_youtube.svg"></a>
-        <a id="icons" href="https://de.linkedin.com/"> 
-          <img width=40px  height=40px  src="icon_linkedin.svg"></a>
+        <a id="soclinks"    href="https://www.instagram.com/">
+          <img  width=30px height=30px  src="icon_insta.svg"></a>
+        <a id="soclinks"href="https://www.youtube.com/">
+          <img width=30px height=30px   src="icon_youtube.svg"></a>
+        <a id="soclinks" href="https://de.linkedin.com/"> 
+          <img width=30px  height=30px  src="icon_linkedin.svg"></a>
         </p>
       <p id="p3"> Copyright © 2022 EIA1 <br> 
         All rights reserved</p>
