--- a/L05/Portfolio.html
+++ b/L05/Portfolio.html
@@ -4,54 +4,58 @@
 <meta charset="utf-8">
 <title> Portfolio</title>
 <link rel="stylesheet" href="portfolio.css"></a>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;400&display=swap" rel="stylesheet">>
 </head>
-  <body>
+  <body> 
+    <div id="banner">
+<p >I am looking for an 
+   INTERNSHIP</p>
+  </div>
   <header>
-    <div class="hintergrundbild">
+    <div class="hintergrundbild" > 
       <div class="container">
-      <a id="logo"  href="portfolio.html">
-        <img  width=133px height=auto src="Logo.png" alt="logo"></a>
+    <a id="logo"  href="Portfolio.html">
+        <img  width=150px height=auto src="Logo.png" alt="logo"></a>
     <nav >
-    <div id="nav">
+    <div  id="nav">
       <a href="Contact.html"> Contact</a>
        <a href="About me.html"> About</a>
-        <a class="active_seite" href="Portfolio.html"> Portfolio</a>
+        <a id="active" href="Portfolio.html"> Portfolio</a>
     </nav>
-     </div>
-    </div>
+</div>
+</div>
   </header>
   <main class="container">
-  <h2>Fotos</h2>
-  <div class="bilder-und-video"> </div>
-  <img class="bilder" src="DSC_3705.JPG" alt="chinatown">
-   <img  class="bilder" src="../DSC_0709.JPG" alt="chinatown">
-    <img class="bilder" src="..//DSC_1327.JPG" alt="moon">
-    <img class="bilder" src="../DSC_2278.JPG" alt="violet flower">
-    <img class="bilder" src="../DSC_2264.JPG" alt="light">
-    <img class="bilder" src="../DSC_2265.JPG" alt="candles"><br>
-    <img id="bilderhoch" src="../DSC_3404.JPG" alt="more flowers">
-    <img  id="bilderhoch"src="IMG_20210422_112036.jpg" alt="more white flowers">
-  <h2>Videos</h2>
-    <video class="video"  controls muted autoplay>
+  <h1>Fotos</h1>
+  <img class="bildchen" src="DSC_3705.JPG" alt="chinatown">
+   <img class="bildchen" src="DSC_0709.JPG" alt="chinatown">
+    <img class="bildchen" src="DSC_1327.JPG" alt="moon">
+    <img class="bildchen" src="DSC_2278.JPG" alt="violet flower">
+    <img class="bildchen" src="DSC_2264.JPG" alt="light">
+    <img class="bildchen" src="DSC_2265.JPG" alt="candles">
+  
+  </div>
+  <h1>Videos</h1>
+    <video id="vid" controls muted autoplay>
      <source src="animation_lara.halmosi.mp4" type="video/mp4">
-    </div>
     </main>
     <footer>
-<div class="container" id="footer">
+<div class="container">
 <p id="p1">EIA1 <br>
   Großhausberg 9 <br>
   78120Furtwangen <br>
   Telefon: 1234 56789 <br>
   lara.sophia.elisabeth.halmosi@hs-furtwangen.de 
 </p>
-<p id="p2">Follow me <br>
-  <a id="icons"   href="https://www.instagram.com/">
-    <img  width=30px height=30px  src="icon_insta.svg"></a>
-  <a id="icons"href="https://www.youtube.com/">
-    <img width=30px height=30px   src="icon_youtube.svg"></a>
-  <a id="icons" href="https://de.linkedin.com/"> 
-    <img width=30px  height=30px  src="icon_linkedin.svg"></a>
-  </p>
+<p  id="p2">Follow me <br>
+  <a id="soclinks" href="https://www.instagram.com/">
+    <img  width=40px height=40px  src="icon_insta.svg"></a>
+  <a id="soclinks"href="https://www.youtube.com/">
+    <img width=40px height=40px   src="icon_youtube.svg"></a>
+  <a id="soclinks" href="https://de.linkedin.com/"> 
+    <img width=40px  height=40px  src="icon_linkedin.svg"></p></a>
 <p id="p3"> Copyright © 2022 EIA1 <br> 
   All rights reserved</p>
 </div>
