--- a/steckbrief.html
+++ b/steckbrief.html
@@ -20,7 +20,8 @@ body {
 	<a href="L04/L03/Portfolio.html" target="_blank">Link zu Aufgabe 4</a>
 	<br>
 	<a href="L05/Portfolio.html" target="_blank">Link zu Aufgabe 5 </a>
-	
+	<br>
+	<a href="L06/eu.html" target="_blank">Link zu Aufgabe 6 </a>
 	
 </body>
 </html>
