--- a/L07/eu.html
+++ b/L07/eu.html
@@ -136,7 +136,7 @@
     <main>
         <section>
             <h2>65,48Mio</h2>
-            <p>Gesamtzahl Einwohnerinnen und Einwohner in Frankreich in 2022</p>
+            <p class="internetnutzungland">Gesamtzahl Einwohnerinnen und Einwohner in Frankreich in 2022</p>
         </section>
 
         <section>
