--- a/steckbrief.html
+++ b/steckbrief.html
@@ -22,6 +22,7 @@ body {
 	<a href="L05/Portfolio.html" target="_blank">Link zu Aufgabe 5 </a>
 	<br>
 	<a href="L06/eu.html" target="_blank">Link zu Aufgabe 6 </a>
-	
+	<br>
+	<a href="L07/eu.html" target="_blank">Link zu Aufgabe 7 </a>
 </body>
 </html>
