--- a/L07/eu.html
+++ b/L07/eu.html
@@ -135,24 +135,23 @@
 
     <main>
         <section>
-            <h2>65,48Mio</h2>
-            <p class="internetnutzungland">Gesamtzahl Einwohnerinnen und Einwohner in Frankreich in 2022</p>
+            <h2 id="pro.land"></h2>
+            <p class="internetnutzungland"> Beträgt die Internetnutzung im Jahr 2022
+            </p>
         </section>
 
         <section>
-            <h2>14%</h2>
-            <p>Relativ zur Gesamtzahl in der EU</p>
+            <h2 id="landzueu"></h2>
+            <p>Relativ zur Gesamtzahl der Internetnutzer in der EU </p>
         </section>
 
         <section>
-            <h2>5,1%</h2>
-            <p>Wachstumsrate seit 2008</p>
+            <h2 id="Veränderungland2010 "></h2>
+            <p> Veränderung der Internetnutzung für Deutschland im Jahr 2022 im Vergleich zu 2010 
+            </p>
         </section>
 
-        <section>
-            <h2>3,34Mio</h2>
-            <p>Wachstumsrate gesamt zwischen 2008 and 2022</p>
-        </section>
+       
     </main>
 
     <footer>
