--- a/L07/eu.html
+++ b/L07/eu.html
@@ -130,24 +130,24 @@
 
     <img src="images/eu_stars.png" class="stars">
     <h1>
-        Einwohnerzahl in der europäischen Union
+       Internetnutzung in der europäischen Union
     </h1>
 
     <main>
         <section>
-            <h2 id="pro.land"></h2>
+            <h2 id="pro-land"></h2>
             <p class="internetnutzungland"> Beträgt die Internetnutzung im Jahr 2022
             </p>
         </section>
 
         <section>
             <h2 id="landzueu"></h2>
-            <p>Relativ zur Gesamtzahl der Internetnutzer in der EU </p>
+            <p class="gesamt">Relativ zur Gesamtzahl der Internetnutzer in der EU </p>
         </section>
 
         <section>
-            <h2 id="Veränderungland2010 "></h2>
-            <p> Veränderung der Internetnutzung für Deutschland im Jahr 2022 im Vergleich zu 2010 
+            <h2 id="veraenderungland2010"></h2>
+            <p class="unterschiedjahr"> Veränderung der Internetnutzung für (Land) im Jahr 2022 im Vergleich zu 2010 
             </p>
         </section>
 
