--- a/steckbrief.html
+++ b/steckbrief.html
@@ -24,5 +24,7 @@ body {
 	<a href="L06/eu.html" target="_blank">Link zu Aufgabe 6 </a>
 	<br>
 	<a href="L07/eu.html" target="_blank">Link zu Aufgabe 7 </a>
+	<br>
+	<a href="L08/Drumpad.html" target="_blank">Link zu Aufgabe 8 </a>
 </body>
 </html>
