--- a/steckbrief.html
+++ b/steckbrief.html
@@ -26,5 +26,7 @@ body {
 	<a href="L07/eu.html" target="_blank">Link zu Aufgabe 7 </a>
 	<br>
 	<a href="L08/Drumpad.html" target="_blank">Link zu Aufgabe 8 </a>
+	<br>
+	<a href="L09/Drumpad.html" target="_blank">Link zu Aufgabe 9 </a>
 </body>
 </html>
