--- a/L09/Drumpad.html
+++ b/L09/Drumpad.html
@@ -24,9 +24,9 @@
     <button class="yellow" id="laugh-2"></button>
     <br>
   <div class="control">
-    <i id="play-button" class="fab fa-bitcoin"></i>
-    <i id="stop" class="fas fa-broom"></i>
-    <i id="remix" class="fas fa-cannabis"></i>
+    <i id="play-button" class="fas fa-play"></i>
+    <i id="stop" class="fas fa-stop"></i>
+    <i id="remix" class="fas fa-random"></i>
 </div>
 </body>
 </html>
