--- a/L10/to-do-list.html
+++ b/L10/to-do-list.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -14,9 +15,10 @@
         <input type="text" id="myInput" placeholder="add task...">
         <span onclick="newElement()" class="addBtn">Add</span>
       </div>
-    
+    <br>
   <ul id="list">
-<li id="filltask"></li>
+><i class="fas fa-trash-alt"></i><i class="fas fa-check-square"></i>
+
 
 
 
