--- a/L10/to-do-list.html
+++ b/L10/to-do-list.html
@@ -12,12 +12,14 @@
 <body>
     <div id="myDIV" class="header">
         <h1>ToDoList</h1>
+        <h2 id="summe">0 in total</h2>
+
         <input type="text" id="myInput" placeholder="add task...">
         <span onclick="newElement()" class="addBtn">Add</span>
       </div>
     <br>
   <ul id="list">
-><i class="fas fa-trash-alt"></i><i class="fas fa-check-square"></i>
+<i class="fas fa-trash-alt"></i>
 
 
 
